# web-routes-quasi

./: Blog.hs  ChangeLog.md  README  Static.hs  blog.hs  runtests.hs  test.hs  test.yaml  web-routes-quasi.cabal
Web/Routes/: Quasi.hs
Web/Routes/Quasi/: Classes.hs  Parse.hs  TH.hs  Wai.hs
static/: style.css
