name:            web-routes-quasi
version:         0.0.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Define data types and parse/build functions for web-routes via a quasi-quoted DSL
category:        Web
stability:       unstable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/

flag buildtests
  description: Build the executable to run unit tests
  default: False

library
    build-depends:   base >= 4 && < 5,
                     web-routes >= 0.20 && < 0.21,
                     template-haskell
    exposed-modules: Web.Routes.Quasi
    ghc-options:     -Wall

executable             runtests
    if flag(buildtests)
        Buildable: True
        cpp-options:   -DTEST
        build-depends: QuickCheck >= 2 && < 3,
                       web-encodings,
                       bytestring,
                       wai,
                       wai-extra
    else
        Buildable: False
    main-is:         runtests.hs

source-repository head
  type:     git
  location: git://github.com/snoyberg/web-routes-quasi.git
